<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_station_list"
            android:icon="@drawable/quantum_ic_search_grey600_24"
            android:title="Stations"/>
        <!--<item-->
            <!--android:id="@+id/nav_location"-->
            <!--android:icon="@drawable/ic_local_gas_station_black_24dp"-->
            <!--android:title="@string/menu_location" />-->
        <item
            android:id="@+id/nav_price"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:title="@string/menu_price" />

        <item
            android:id="@+id/nav_add_station"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="Suggest Gas Station"/>

        <!--<item-->
            <!--android:id="@+id/nav_suggest"-->
            <!--android:icon="@drawable/ic_add_black_24dp"-->
            <!--android:title="Suggest Station" />-->

    </group>

    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="About Us" />

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
        </menu>
    </item>

</menu>
